--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "atom-swap-command-control",
   "main": "./lib/atom-swap-command-ctrl",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Swaps Command and Control keys. It is usesful when you have to move back and forth between MacOS and Linux",
   "keywords": [
-    "keyboard", "keybinding", "MacOS", "Linux"
+    "keyboard",
+    "keybinding",
+    "MacOS",
+    "Linux"
   ],
   "activationCommands": {
     "atom-workspace": "atom-swap-command-ctrl:toggle"
@@ -14,6 +17,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
